--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -68,10 +68,10 @@ h2{
     padding: 50px;
     padding-bottom: 90px;
     background: black;
-    .new-order a {
+    .new-order a, .delete-all-order a {
       position: absolute;
       bottom: 5%;
-      left: 40%;
+      left: 31%;
       font-size: 17px;
       line-height: 1.5;
       border: 1px solid;
@@ -84,6 +84,9 @@ h2{
         color: black;
 
       }
+    }
+    .delete-all-order a {
+      left: 74%;
     }
     .time, .owl  {
       font-size: 25px;
