--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -72,7 +72,7 @@
             <%= check_box_tag 'other[]' %>
               </p>
             </li>
-            <%= hidden_field_tag 'hidden_name', nil, :class=> "hidden_shit"%>
+            <%= hidden_field_tag 'hidden_name', nil, :class=> "hidden_name"%>
             <%= hidden_field_tag 'hidden_coffee', nil, :class=> "hidden_cafe"%>
 
             <%= submit_tag 'Submit Order', :class => 'button submit'%>
